log
Fri 17 Mar 2023 11:49:12 AM UTC: 
 tests:  0|7
total_score: 0/70
9378b78
Fri 17 Mar 2023 11:49:34 AM UTC: 
 exercises.c | 37 ++++++++++++++++++++++++++++++++-----
 1 file changed, 32 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:30:20: error: ‘i’ undeclared (first use in this function)
   30 |   int menorTmp = a[i];
      |                    ^
exercises.c:30:20: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:47:22: error: expected ‘;’ before ‘}’ token
   47 |       *max = mayorTmp
      |                      ^
      |                      ;
   48 |     }
      |     ~                 
Compilation failed
021287f
Fri 17 Mar 2023 11:50:21 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:48:22: error: expected ‘;’ before ‘}’ token
   48 |       *max = mayorTmp
      |                      ^
      |                      ;
   49 |     }
      |     ~                 
Compilation failed
aaffb15
Fri 17 Mar 2023 11:50:29 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
5053b72
Fri 17 Mar 2023 11:51:35 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
21a3e2f
Fri 17 Mar 2023 12:05:15 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
ab946b5
Fri 17 Mar 2023 12:12:12 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:96:19: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   96 |   vctr->capacidad = (int*) malloc (sizeof(int));
      |                   ^
cc1: all warnings being treated as errors
Compilation failed
b48460b
Fri 17 Mar 2023 12:12:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
6e04f71
Fri 17 Mar 2023 12:13:57 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
15ac069
Fri 17 Mar 2023 12:18:02 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 40/70
29044fa
Fri 17 Mar 2023 12:19:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:108:4: error: ‘v’ is a pointer; did you mean to use ‘->’?
  108 |   v.datos[i]=valor;
      |    ^
      |    ->
Compilation failed
c407a9f
Fri 17 Mar 2023 12:19:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:108:5: error: ‘v’ is a pointer; did you mean to use ‘->’?
  108 |   *v.datos[i]=valor;
      |     ^
      |     ->
Compilation failed
fd759bb
Fri 17 Mar 2023 12:20:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0c3bf5c
Fri 17 Mar 2023 12:20:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
3eaa809
Fri 17 Mar 2023 12:21:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:108:15: error: invalid type argument of unary ‘*’ (have ‘int’)
  108 |   v->datos[i]=*valor;
      |               ^~~~~~
Compilation failed
8b8ec6a
Fri 17 Mar 2023 12:21:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
88450a4
Fri 17 Mar 2023 12:22:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
9a5bcae
Fri 17 Mar 2023 12:23:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
a86c53f
Fri 17 Mar 2023 12:25:42 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 50/70
556619d
Fri 17 Mar 2023 12:29:49 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:136:1: error: expected ‘,’ or ‘;’ before ‘}’ token
  136 | }
      | ^
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
In file included from test.c:5:
exercises.c:132:9: error: unused variable ‘vecC’ [-Werror=unused-variable]
  132 |    int *vecC = vecA
      |         ^~~~
exercises.c:131:9: error: unused variable ‘vecB’ [-Werror=unused-variable]
  131 |    int *vecB = b->datos;
      |         ^~~~
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
1b4f86b
Fri 17 Mar 2023 12:30:18 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:138:1: error: "/*" within comment [-Werror=comment]
  138 | /*
      |  
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
fc09269
Fri 17 Mar 2023 12:30:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
973c94e
Sat 18 Mar 2023 01:28:05 AM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:133:9: error: incompatible types when assigning to type ‘Vector’ from type ‘int’
  133 |    *c = vecC;
      |         ^~~~
Compilation failed
6f5b639
Sat 18 Mar 2023 01:28:12 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:133:9: error: invalid type argument of unary ‘*’ (have ‘int’)
  133 |    *c = *vecC;
      |         ^~~~~
Compilation failed
99ca54c
Sat 18 Mar 2023 01:28:45 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:133:15: error: invalid type argument of unary ‘*’ (have ‘int’)
  133 |    c->datos = *vecC;
      |               ^~~~~
Compilation failed
656af16
Sat 18 Mar 2023 01:28:51 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:133:13: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  133 |    c->datos = vecC;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
d465866
Sat 18 Mar 2023 01:29:26 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:132:16: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  132 |    int *vecC = *vecA + *vecB;
      |                ^
exercises.c:133:13: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  133 |    c->datos = *vecC;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
d16e439
Sat 18 Mar 2023 01:29:31 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:132:16: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  132 |    int *vecC = *vecA + *vecB;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
f900982
Sat 18 Mar 2023 01:29:35 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:133:13: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  133 |    c->datos = vecC;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
69f3408
Sat 18 Mar 2023 01:32:43 AM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:136:11: error: invalid operands to binary + (have ‘int *’ and ‘int *’)
  136 |   c->datos+b->datos;
      |   ~~~~~~~~^~~~~~~~~
      |    |        |
      |    int *    int *
Compilation failed
623173a
